force-app/main/default/objects/Species__c/fields/Ideal_Maxima_temperature__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Maxima_temperature__c</fullName>
    <label>Ideal Maxima temperature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>