force-app/main/default/objects/Species__c/fields/Locations__c.field-meta.xml
<CustomField>
    <fullName>Locations__c</fullName>
    <label>Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indoors</fullName>
                <default>true</default>
                <label>Indoors</label>
            </value>
            <value>
                <fullName>Outdoors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>