force-app/main/default/objects/Species__c/fields/Pulverizacion__c.field-meta.xml
<CustomField>
    <fullName>Pulverizacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pulverización</label>
    <type>Checkbox</type>
</CustomField>