force-app/main/default/objects/Species__c/fields/Snowing__c.field-meta.xml
<CustomField>
    <fullName>Snowing__c</fullName>
    <label>Snowing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Month</valueSetName>
    </valueSet>
</CustomField>